--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.11
   http: ^1.2.0
+  provider: ^6.0.5
+  intl: ^0.18.0
 
 
 dev_dependencies:
